1.1.0:

* added --gl commandline option to set OpenGL version

1.0.0: 2017 Mar 17

first release

0.1.0: Nov 2016

initial work & testing